# transitflow

./: .flake8  .gitignore  App.tsx  Dockerfile  Dockerfile.psycopg  Makefile  README.md  README_FINAL.md  README_old.md  docker-compose.api.yml  pyproject.toml  pytest.ini  requirements-api.txt  requirements-test.txt
.github/workflows/: deploy.yml
config/: app.docker.yml  app.render.example.yml
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: classify_delay.sql  generate_schema_name.sql  scd_type2.sql
dbt/models/: sources.yml
dbt/models/dimensions/: _dimensions.yml  dim_lines.sql  dim_stops.sql
dbt/models/marts/: _marts.yml  fct_daily_performance.sql  fct_stop_arrivals.sql
dbt/models/staging/: _staging.yml  stg_enriched.sql  stg_stop_events.sql
dbt/seeds/: seed_lines.csv  seed_stops.csv
dbt/snapshots/: dim_lines_snapshot.sql  dim_stops_snapshot.sql
docker/: Dockerfile.mlflow  Dockerfile.serving  docker-compose.yml
eval/: qa_debug.jsonl  qa_gold_v2.jsonl  qa_gold_v2_with_chunks.jsonl  qa_small_live.jsonl
eval/reports/: dense_clean.json  eval_offline_flan_t5.json  hybrid_final_fixed.json
feature_store/: __init__.py  api.py  config.py  feature_service.py  feature_sync.py  offline_store.py  online_store.py
feature_store/storage/: offline_store.py  online_store.py
flink/: pom.xml
flink/src/main/: pom.xml
flink/src/main/java/com/airquality/berlin/: HourlyAggregate.java  PM25AggregateFunction.java  PM25AggregatorJob.java  PM25Deserializer.java  PM25Reading.java  (+1 more)
flink/src/main/java/fi/transitflow/: TransitFlinkApp.java
flink/src/main/resources/: simplelogger.properties
flink/src/test/java/fi/transitflow/: GeoUtilsTest.java  VehicleStateTest.java
flows/: prefect_a2a.py
grafana/dashboards/: data_quality.json  ml_performance.json  operations.json
grafana/provisioning/dashboards/: dashboards.yml
infra/local/: .env.example  docker-compose.yml  nginx.conf
infra/local/init/: prometheus.yml
infra/local/init/minio/: setup.sh
infra/local/init/postgres/: init.sql
infra/local/init/prometheus/: prometheus.yml
infra/local/init/redpanda/: topics.sh
ingestion/: bridge.py  config.py  metrics.py  models.py  mqtt_client.py  producer.py
ml_pipeline/: __init__.py  config.py  registry.py  training.py
mlops/: __init__.py  benchmark.py  promotion.py  retraining.py  validation.py
monitoring/: __init__.py  drift.py  metrics.py  slo.py
rag/: bm25_retriever.py  chain.py  hybrid_retriever.py  reranker.py  retriever.py
schema_registry/: client.py  validator.py
schemas/: dead_letter.avsc  pm25_measurement.avsc  weather_observation.avsc
schemas/avro/: enriched_event.avsc  invalid_event.avsc  stop_arrival.avsc  vehicle_position.avsc
scripts/: check_db_readiness.py  check_gold_message.py  check_silver_message.py  eval_offline.py  explore_data.py  find_gold_chunks.py  generate_gold_qa.py  ingest_data.py  manual_test_chain.py  monitor_drift.py  register_schemas.py  run_batch_pipeline.sh  run_bridge.py  smoke_test_ml_serving.py  train_model.py  verify_feature_store.py  verify_ingestion.py  verify_lakehouse.py  verify_ml_serving.py  verify_mlops.py  verify_pipeline.py  verify_stream_pipeline.py  verify_train_model.py
serving/: __init__.py  api.py  cache.py  circuit_breaker.py  settings.py  shadow.py  tracing.py
spark/: bronze_ingestion.py  bronze_writer.py  config.py  gold_aggregation.py  initialize_metadata.py  maintenance.py  reconciliation.py  silver_transform.py  sync_bronze_to_postgres.py
sql/: 001_bronze_schema.sql
src/: __init__.py
src/berlin_air_quality/api/: __init__.py  eea_client.py  weather_client.py
src/berlin_air_quality/ingestion/: __init__.py  producer.py  schema_registry.py  validators.py
src/berlin_air_quality/models/: __init__.py  schemas.py
src/berlin_air_quality/utils/: __init__.py  config.py
src/ingestion/: bridge.py  config.py  metrics.py  models.py  mqtt_client.py  producer.py
src/schema_registry/: client.py  validator.py
tests/: _init__.py  conftest.py  test_api.py  test_api_clients.py  test_driver.py  test_extract.py  test_ingestion.py  test_mcp.py
tests/unit/: test_ingestion.py
tests/unit/dbt/: test_dbt_contracts.py
tests/unit/feature_store/: test_feature_store.py
tests/unit/ingestion/: test_ingestion.py
tests/unit/ml_pipeline/: test_ml_pipeline.py
tests/unit/mlops/: test_mlops.py
tests/unit/monitoring/: test_monitoring.py
tests/unit/schema_registry/: test_schema_registry.py
tests/unit/serving/: test_serving.py  test_shadow.py
tests/unit/spark/: test_config.py  test_maintenance.py  test_reconciliation.py  test_schemas.py  test_transformation.py
ui/: index.html
ui/src/: App.tsx
(+10 files in other folders)
